<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2009 - 2015 Carmen Alvarez

    This file is part of Nounours for Android.

    Nounours for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Nounours for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Nounours for Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
	<string name="app_name">Nounours</string>
	<string name="spin">Spin</string>
	<string name="cartwheel">Cartwheel</string>
	<string name="headbang">Head bang</string>
	<string name="disco">Disco dance</string>
	<string name="clap">Clap hands</string>
	<string name="sleepsound">Sleep</string>
	<string name="shake">Shake</string>
	<string name="reverseSpin">Reverse Spin</string>
	<string name="ska">Macarenours</string>
	<string name="boing">Boing!</string>
	<string name="fly">Fly</string>
	<string name="excited">Excited</string>
	<string name="random">Random</string>
	<string name="actions">Actions</string>
	<string name="about">About</string>
	<string name="themes">Themes</string>
	<string name="rainbow">Rainbow background</string>
	<string name="halloween">Halloween</string>
	<string name="greenshirtbluebkg">Green shirt, blue backgrd</string>
	<string name="bugdroid">Bugdroid</string>
	<string name="predownload">Looking for my %s theme</string>
	<string name="downloading">Downloading my %s theme online&#8230;</string>
	<string name="loading">Loading my %s theme</string>
	<string name="defaultTheme">Default</string>
	<string name="abouttext"><![CDATA[
<h1>Nounours version %s</h1>
By Carmen Alvarez (<a href="mailto:c@rmen.ca">c@rmen.ca</a>)<br>
Source code on <a href="https://github.com/caarmen/nounours-android">Github</a><br><br>
<b>Credits:</b><br>
B-Roll (Macarenours music): <a href="http://incompetech.com">Kevin MacLeod</a><br><br>
<a href="https://github.com/nbadal/android-gif-encoder">Nick Badal</a> and <a href="http://www.jappit.com/blog/2008/12/04/j2me-animated-gif-encoder/">Alessandro La Rosa</a>, for the animated gif encoder.<br><br>
The Android(TM) Robot is created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.]]></string>
	<string name="help">Help</string>
	<string name="disablesound">Turn sound/vibrate off</string>
	<string name="enablesound">Turn sound/vibrate on</string>
	<string name="startle">Startle</string>
	<string name="toast_remindMenuButton">Press the MENU button for more options\u2026</string>
	<string name="themeLoadError">Oops, I couldn\'t load my theme. Try again! Check your network connection</string>
	<string name="options">Options</string>
	<string name="idleTimeout">Time before I fall asleep</string>
	<string name="record_start">Start recording</string>
	<string name="record_stop">Stop recording</string>
	<string name="notif_save_animation_in_progress_title">Saving the animation&#8230;</string>
	<string name="notif_save_animation_in_progress_content">Saving the Nounours animation&#8230;</string>
	<string name="notif_save_animation_done">Animation saved</string>
	<string name="notif_save_animation_failed">Couldn\'t save the animation</string>
	<string name="share_app_chooser_title">Share via</string>

</resources>
