<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_animation"
        android:showAsAction="ifRoom"
        android:icon="@drawable/menu_action"
        android:title="@string/actions"
        tools:ignore="UnusedAttribute">
        <menu><!--Will be created at runtime--></menu>
    </item>

    <item
        android:id="@+id/menu_options"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/options"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/menu_help"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/help"
        tools:ignore="UnusedAttribute" />
</menu>